--- a/Python_Basic_ch01_변수와 자료형.ipynb
+++ b/Python_Basic_ch01_변수와 자료형.ipynb
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e64545ca",
+   "id": "7aa8739a",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e85aed99",
+   "id": "235c7665",
    "metadata": {},
    "source": [
     "형 변환 (Type Casting)\n",
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "1058e3bb",
+   "execution_count": 29,
+   "id": "e5c9c70f",
    "metadata": {},
    "outputs": [
     {
@@ -209,18 +209,9 @@
       "3\n",
       "<class 'int'>\n",
       "3.14\n",
+      "<class 'float'>\n",
+      "3.0\n",
       "<class 'float'>\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '3.14'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12440\\178523871.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;31m# 문자열 실수형 -> 정수형 (X)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '3.14'"
      ]
     }
    ],
@@ -253,6 +244,14 @@
     "print(float(c))\n",
     "print(type(float(c)))  # <class 'float'>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31b7ac58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
