--- a/Python_Basic_ch01_변수와 자료형.ipynb
+++ b/Python_Basic_ch01_변수와 자료형.ipynb
@@ -140,7 +140,8 @@
    "source": [
     "### 3. 자료형(Type)\n",
     "\n",
-    "1. 문자열(String): \"Hello\", 'Hi'\n",
+    "1. 문자열(String): \"Hello\", 'Hi'  \n",
+    "    1-1. 파이썬에서는 \" , ' 을 구분하지 않으나 편의상 \"로 통일하는 걸로\n",
     "2. 정수형 숫자(int): 3, 0, -1 \n",
     "3. 실수형 숫자(float): 3.1, 0.0, -2.2\n",
     "4. 논리형(boolean): True, False\n",
@@ -239,6 +240,7 @@
     "print(type(float(d)))  # <class 'float'>\n",
     "\n",
     "# 문자열 실수형 -> 정수형 (X)\n",
+    "#print(int(d))\n",
     "\n",
     "# 문자열 정수형 -> 실수형 (O)\n",
     "print(float(c))\n",
@@ -246,12 +248,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3f33556",
+   "metadata": {},
+   "source": [
+    "### None\n",
+    "- 아무런 값을 갖지 않을 때 사용\n",
+    "- 일반적으로 변수가 초기값을 갖지 않게 하여 해당 변수를 생성할 때 사용\n",
+    "- 기타 언어의 Null과 같은 의미로 사용"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "31b7ac58",
+   "execution_count": 2,
+   "id": "28ef514a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_name = None\n",
+    "print(student_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68a44da1",
+   "metadata": {},
+   "source": [
+    "## 4. 변수(Variable)\n",
+    "-변수: 하나의 값을 저장할 수 있는 메모리 공간\n",
+    "\n",
+    "```python\n",
+    "# 변수 선언 및 초기화 방법\n",
+    "num = 5\n",
+    "```\n",
+    "동적 타이핑 언어: 코드 작성 시 type을 명시하지 않음 (코드 실행 시 파이썬이 체크)  \n",
+    "대입연산자(=): 우측의 값을 좌측에 대입 (동등 (equal)의 의미 아님)\n",
+    "- Python에서 동등(equal)은 ==을 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8eb7ba24",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# name 변수 생성\n",
+    "# '\"Gyumin Choi\" 값을 name 변수에 저장\n",
+    "\n",
+    "# name -> 변수 이름\n",
+    "# = -> 대입 연산자\n",
+    "# \"Gyumin Choi\" -> 값\n",
+    "name = \"Gyumin Choi\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ada0b4ed",
+   "metadata": {},
+   "source": [
+    "### 변수 명명 규칙 (naming rule)\n",
+    "1. 영문 대소문자, _, 숫자로만 구성\n",
+    "2. 숫자로 시작할 수 없음\n",
+    "3. 영어 대소문자 구별\n",
+    "4. 예약어 사용 불가\n",
+    "\n",
+    "- 예약어: Python에서 미리 선점하여 사용 중인 키워드\n",
+    "- 예약어는 변수, 함수, 클래스 등의 사용자 정의 이름으로 사용할 수 없음\n",
+    "- 예약어 ex) for, while, if, None, True, False, return, def 등\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4aadc960",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1abc = 5 (X) 숫자로 시작 불가\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c17dc3db",
+   "metadata": {},
+   "source": [
+    "## 5. Naming Method\n",
+    "- 변수, 함수, 클래스 등의 사용자 정의 이름에 사용\n",
+    "- 프로그래밍 언어별로 사용하는 Naming Method가 다름\n",
+    "- Python은 snake_case 사용! \n",
+    "\n",
+    "1. snake_case: 소문자롤 작성, 합성어 '_' 사용 \n",
+    "2. camelCase: 첫글자 소문자, 합성어 첫글자 대문자\n",
+    "3. PascalCase: 첫글자 대문자, 합성어 첫글자 대문자"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "213ad9e1",
+   "metadata": {},
+   "source": [
+    "### 6. format 출력\n",
+    "1. format(): 과거\n",
+    "2. f-string: 최신"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7f77ee0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전남대학교 214073, Gyumin Choi입니다.\n",
+      "전남대학교 214073, Gyumin Choi입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_num = 214073\n",
+    "student_name = \"Gyumin Choi\"\n",
+    "# 출력: 전남대학교 214073, Gyumin Choi입니다. \n",
+    "print(\"전남대학교 {}, {}입니다.\".format(student_num, student_name))\n",
+    "print(f\"전남대학교 {student_num}, {student_name}입니다.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "955890d7",
+   "metadata": {},
+   "source": [
+    "### 7. 사칙연산\n",
+    "\n",
+    "- 더하기: +\n",
+    "- 빼기: -\n",
+    "- 곱하기: *\n",
+    "- 나누기: /\n",
+    "- 나누기(몫): //\n",
+    "- 나누기(나머지): %\n",
+    "- 제곱: **"
+   ]
   }
  ],
  "metadata": {
