--- a/Python_Basic_ch02_문자열 타입의 이해.ipynb
+++ b/Python_Basic_ch02_문자열 타입의 이해.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "f69c2074",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "72cf4d64",
    "metadata": {},
    "outputs": [
@@ -257,13 +257,13 @@
      "output_type": "stream",
      "text": [
       "HELLO WORLD\n",
-      "hello world\n",
-      "hELLO wORLD\n"
+      "hello world\n"
      ]
     }
    ],
    "source": [
     "# upper() & lower() : 대문자/소문자로 변경\n",
+    "\n",
     "print(str.upper())\n",
     "print(str.lower())"
    ]
@@ -286,7 +286,7 @@
     }
    ],
    "source": [
-    "# replace(): 문자열 내의 특정 문자 치환\n",
+    "# replace() : 문자열 내의 특정 문자 치환\n",
     "str.replace(\"o\", \"O\")  # 복수개 치환"
    ]
   },
@@ -306,7 +306,7 @@
     }
    ],
    "source": [
-    "# split(): 구분자를 기준으로 문자열 분할, default 구분자 공백\n",
+    "# split() : 구분자를 기준으로 문자열 분할, default 구분자 공백\n",
     "a = \"hello world what a nice weather\"\n",
     "print(a.split(\"w\"))\n",
     "print(a.split())"
@@ -314,11 +314,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cccfa833",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "아이디:      stkdczy      , 길이: 18\n",
+      "아이디: stkdczy, 길이: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# strip() : 문자열의 좌우공백을 제거 \n",
+    "id = \"     stkdczy      \"\n",
+    "print(f\"아이디: {id}, 길이: {len(id)}\")\n",
+    "print(f\"아이디: {id.strip()}, 길이: {len(id.strip())}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1dc2ff17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  find() and rfind()\n",
+    "#  - 문자열 내부 특정 문자의 인덱스를 출력\n",
+    "str = \"Hello Python\"\n",
+    "print(str.find('l'))\n",
+    "print(str.rfind('l'))\n",
+    "print(str.find('Python'))\n",
+    "print(str.rfind('Python'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e07db1ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in() : 특정 문자열을 포함하고 있는지 확인 (True, False)\n",
+    "\n",
+    "print(\"Hi\" in \"Hi Python\")\n",
+    "print(\"Hi\" in \"Hello Python\")"
+   ]
   }
  ],
  "metadata": {
