--- a/Python_Basic_ch04_조건문(if).ipynb
+++ b/Python_Basic_ch04_조건문(if).ipynb
@@ -49,18 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3279e391",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "성인\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# if 조건이 1개인 경우 (성인 판단)\n",
     "age = 20\n",
@@ -70,18 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "730ff735",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "성인\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# if~else 조건 1개와 조건 이외의 경우\n",
     "age = 22\n",
@@ -93,18 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f16ddb2f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3학년\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# if~else 조건이 2개 이상인 경우\n",
     "grade = 3\n",
@@ -120,18 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "917eba4d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1등급\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# if~elif~else 조건 2개 이상과 조건 이외의 경우\n",
     "score = 90\n",
@@ -193,6 +161,82 @@
     "      \n",
     "     "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85a70d87",
+   "metadata": {},
+   "source": [
+    "### 연습문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42d1635f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 문제 1. 어떤 종류의 학생인지 맞히기\n",
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# 1. 사용자로부터 태어난 연도 입력받기\n",
+    "born = input(\"당신이 태어난 연도를 입력하세요: \")\n",
+    "\n",
+    "# 2. 나이 계산\n",
+    "age=datetime.today().year-int(born)+1\n",
+    "print(age)\n",
+    "\n",
+    "# 3. 학생 분류 출력\n",
+    "if age <=26 and age >=20:\n",
+    "    student = \"대학생\"\n",
+    "elif age < 20 and age>=17:\n",
+    "    student = \"고등학생\"\n",
+    "elif age<16 and age >= 14:\n",
+    "    student = \"중학생\"\n",
+    "elif age<13 and age >= 8:\n",
+    "    student = \"초등학생\"\n",
+    "else:\n",
+    "    student = \"학생 아님\"\n",
+    "\n",
+    "print(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f45cf99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 문제 2. 학점 계산기\n",
+    "\n",
+    "# 1. 사용자로부터 학점 입력 (소숫점, ex. 4.2)\n",
+    "\n",
+    "# + 추가조건: 사용자가 입력한 값이 0.0~4.5이면 2번으로 넘어감\n",
+    "#                     아니면 error 문구 출력 (~의 값을 입력해주세요.)\n",
+    "# 2. 입력받은 학점에 따라 등급 출력\n",
+    "# A 4.0 ~ 4.5\n",
+    "# B 3.5 ~ 3.9\n",
+    "# C 3.0 ~ 3.4\n",
+    "# D 2.5 ~ 2.9\n",
+    "# 그외 F\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "492840f9",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc6bf1a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
