--- a/Python_Basic_ch04_조건문(if).ipynb
+++ b/Python_Basic_ch04_조건문(if).ipynb
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42d1635f",
+   "id": "5ef52e8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,28 +215,32 @@
     "# 1. 사용자로부터 학점 입력 (소숫점, ex. 4.2)\n",
     "\n",
     "# + 추가조건: 사용자가 입력한 값이 0.0~4.5이면 2번으로 넘어감\n",
-    "#                     아니면 error 문구 출력 (~의 값을 입력해주세요.)\n",
+    "#                     아니면 error 문구 출력 (~의 값을 입력해주세요)\n",
     "# 2. 입력받은 학점에 따라 등급 출력\n",
     "# A 4.0 ~ 4.5\n",
     "# B 3.5 ~ 3.9\n",
     "# C 3.0 ~ 3.4\n",
     "# D 2.5 ~ 2.9\n",
-    "# 그외 F\n"
+    "# 그외 F\n",
+    "\n",
+    "score =float(input(\"학점을 입력하세요: \"))\n",
+    "\n",
+    "if score>=0.0 and score <=4.5:\n",
+    "    if score>=4.0:\n",
+    "        grade = \"A\"\n",
+    "    elif score>=3.5:\n",
+    "        grade = \"B\"\n",
+    "    elif score>=3.0:\n",
+    "        grade = \"C\"\n",
+    "    elif score>=2.5 :\n",
+    "        grade = \"D\"\n",
+    "    else:\n",
+    "        grade=\"F\"\n",
+    "    print(f\"학점은 {grade}입니다.\")\n",
+    "else:\n",
+    "    print(\"0.0~4.5의 값을 입력하세요.\")\n",
+    "    "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "492840f9",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc6bf1a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
